@@ -4,6 +4,8 @@ Release 0.9.0 - unreleased
 
   NEW FEATURES
 
+    TAJO-849: Add Parquet storage to HCatalogStore. (jaehwa)
+
     TAJO-494: Extend TajoClient to run a query with a plan context serialized 
     as the JSON form. (jihoon)
 
